--- a/fancontrol/app/src/main/AndroidManifest.xml
+++ b/fancontrol/app/src/main/AndroidManifest.xml
@@ -12,14 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SecretConfigActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoadingActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SecretConfigActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".SettingsActivity" />
         <!--
             Because android:exported is set to "false",
